feat: add cde pvs to swagger_server yaml
