# python/src/swagger_server/controllers/cdes_controller.py
@@ -1,0 +1,12 @@
+def cdes_model_handle_model_version(modelHandle, modelVersion):
+    """
+    Get Permissible Values and Synonyms for a specified model and version.
+
+    :param modelHandle: Handle of model (use /models to find available handles)
+    :type modelHandle: str
+    :param modelVersion: Version of model (use /models to find available versions)
+    :type modelVersion: str
+
+    :rtype: object
+    """
+    return "do some magic!"
